Inicio del juego de Construccion de isomeros

--- a/lecciones/identificacion-grupos-funcionales/Identificacion_Caracteristicas.html
+++ b/lecciones/identificacion-grupos-funcionales/Identificacion_Caracteristicas.html
@@ -16,6 +16,7 @@
     <header class="text-center py-4">
         <h1>Identificación de Grupos Funcionales</h1>
         <p>Puntuación: <span id="puntuacion">0</span></p>
+        <a href="/" class="main-button" id="mainPageButton">Main Page</a>
     </header>
 
     <main class="container text-center">
