--- a/lecciones/identificacion-grupos-funcionales/Estructuras.html
+++ b/lecciones/identificacion-grupos-funcionales/Estructuras.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Space+Mono&display=swap"
         rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <link rel="stylesheet" href="../../css/styles.css">
     <style>
         :root {
             --primary: #4CAF50;
@@ -284,6 +285,9 @@
 </head>
 
 <body>
+    <header>
+        <a href="/" class="main-button" id="mainPageButton">Main Page</a>
+    </header>    
     <div id="particles-js"></div>
     <div class="container">
         <div class="header">
