Fin de construccion de isomeros y cambio en index para las referencias

--- a/index.html
+++ b/index.html
@@ -285,24 +285,24 @@
             <div class="topic-card">
                 <h2>Isomería</h2>
                 <ul class="subtopic-list">
-                    <li><a href="Isomeria/ConstruccionIsomeros.html">Construcción de Isómeros</a></li>
+                    <li><a href="/lecciones/Isomeria/ConstruccionIsomeros.html">Construcción de Isómeros</a></li>
                 </ul>
             </div>
 
             <div class="topic-card">
                 <h2>Nomenclatura</h2>
                 <ul class="subtopic-list">
-                    <li><a href="Nomenclatura/Blaster.html">Nomenclatura Blaster</a></li>
-                    <li><a href="Nomenclatura/CarreraQuimica.html">Carrera Química</a></li>
-                    <li><a href="Nomenclatura/Numeracion.html">Numeración</a></li>
+                    <li><a href="/lecciones/Nomenclatura/Numeracion.html">Numeración</a></li>
+                    <li><a href="/lecciones/Nomenclatura/CarreraQuimica.html">Nomenclatura Blaster</a></li>
+                    <li><a href="/lecciones/Nomenclatura/Blaster.html">Carrera Química</a></li>
                 </ul>
             </div>
 
             <div class="topic-card">
                 <h2>Reacciones y Obtención</h2>
                 <ul class="subtopic-list">
-                    <li><a href="Reacciones-Obtencion/LaboratorioDeObtencion.html">Laboratorio de Obtención</a></li>
-                    <li><a href="Reacciones-Obtencion/MounstroReacciones.html">Monstruo de Reacciones</a></li>
+                    <li><a href="/lecciones/Reacciones-Obtencion/MounstroReacciones.html">Laboratorio de Obtención</a></li>
+                    <li><a href="/lecciones/Reacciones-Obtencion/LaboratorioDeObtencion.html">Monstruo de Reacciones</a></li>
                 </ul>
             </div>
         </div>
