--- a/lecciones/Nomenclatura/Numeracion.html
+++ b/lecciones/Nomenclatura/Numeracion.html
@@ -308,12 +308,12 @@
             2: 'et',
             3: 'prop',
             4: 'but',
-            5: 'penta',
-            6: 'hexa',
-            7: 'hepta',
-            8: 'octa',
-            9: 'nona',
-            10: 'deca'
+            5: 'pent',
+            6: 'hex',
+            7: 'hept',
+            8: 'oct',
+            9: 'non',
+            10: 'dec'
         };
 
         const CADENAS_CARBONO = {
